--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@stylelint/postcss-css-in-js": "^0.37.2",
-    "@types/lodash-es": "^4.17.6",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.68",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
@@ -35,7 +35,6 @@
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "babel-loader": "^8.2.3",
-    "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^10.2.0",
     "csstype": "^3.0.10",
     "eslint": "^8.10.0",
@@ -68,11 +67,15 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.25.0",
     "bezier-easing": "^2.1.0",
+    "core-js": "^3.21.1",
+    "es5-shim": "^4.6.5",
+    "es6-shim": "^0.35.6",
+    "es7-shim": "^6.0.0",
     "fastify": "^3.25.3",
     "fastify-sensible": "^3.1.2",
     "fastify-static": "^4.5.0",
     "framer-motion": "^6.2.8",
-    "lodash-es": "^4.17.21",
+    "lodash": "^4.17.21",
     "modern-css-reset": "^1.4.0",
     "moment-timezone": "^0.5.34",
     "pino-pretty": "^7.3.0",
