--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-sort": "^2.4.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
