--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@stylelint/postcss-css-in-js": "^0.37.2",
-    "@types/lodash": "^4.14.178",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^16.11.68",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
@@ -75,7 +75,7 @@
     "fastify-sensible": "^3.1.2",
     "fastify-static": "^4.5.0",
     "framer-motion": "^6.2.8",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "modern-css-reset": "^1.4.0",
     "moment-timezone": "^0.5.34",
     "pino-pretty": "^7.3.0",
