--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.17.2",
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "axios": "^0.25.0",
     "bezier-easing": "^2.1.0",
     "fastify": "^3.25.3",
