--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "babel-loader": "^8.2.3",
+    "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^10.2.0",
     "csstype": "^3.0.10",
     "eslint": "^8.10.0",
@@ -64,6 +65,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.17.2",
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "axios": "^0.25.0",
     "bezier-easing": "^2.1.0",
     "fastify": "^3.25.3",
