--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
+    "@squoosh/lib": "^0.4.0",
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^16.11.68",
